add translations, disclaimer, update readme

--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,9 @@
 
 <head>
   <meta charset="utf-8">
+  <meta name="description" content="Free test repeat tool for learning english vocabulary and other subjects">
+  <meta name="keywords" content="Free, repitition, english, german, school, vocabulary training, opensource">
+  <meta name="author" content="Alexander Maushammer">
   <title>RepeatMaster</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
